--- a/clubAppFolder/templates/index.html
+++ b/clubAppFolder/templates/index.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="container">
-    {% for post in blog_post.items %}
+    {% for post in blog_posts.items %}
         <div class="card">
             <div class="card-body">
                 <h2><a class="card-title" href="{{url_for('blog_posts.blog_post', blog_post_id=post.id)}}">{{post.title}}</a>
@@ -13,14 +13,11 @@
                     <p>Published on: {{post.date.strftime('%Y-%m-%d')}}</p>
                     <a class="btn btn-primary" href="{{url_for('blog_posts.blog_post', blog_post_id=post.id)}}">Read Blog Post</a>
                 </h2>
-
             </div>
-
         </div>
-
     {% endfor %}
-
 </div>
+
 <nav aria-label="Page Navigation example">
     <ul class="pagination justify-content-center">
         {% for page_num in blog_posts.iter_pages(left_edge=1,right_edge=1,left_current=1,right_current=2) %}
@@ -32,6 +29,8 @@
             <li class="page-item">
                 <a class="page-link" href="{{url_for('core.index', page=page_num)}}">{{page_num}}</a>
             </li>
+            {% endif%}
+        {% endfor %}
     </ul>
 </nav>
 
