--- a/clubAppFolder/templates/user_blog_posts.html
+++ b/clubAppFolder/templates/user_blog_posts.html
@@ -9,9 +9,10 @@
     </div>
 </div>
 
-{% for post in blog_post.items %}
+<div>
+{% for post in blog_posts.items %}
 <h2><a href="{{url_for('blog_posts.blog_post', blog_post_id=post.id)}}">{{post.title}}</a></h2>
-Written By: <a href="{{url_for('users.user_post', username=post.author.username)}}">{{post.author.username}}</a>
+Written By: <a href="{{url_for('users.user_posts', username=post.author.username)}}">{{post.author.username}}</a>
 <p class="text-muted">Published on: {{post.date.strftime("%Y-%m-%d")}}</p>
 <br>
 <p>{{post.text}}</p>
@@ -29,8 +30,9 @@ Written By: <a href="{{url_for('users.user_post', username=post.author.username)
             <li class="page-item">
                 <a class="page-link" href="{{url_for('users.user_posts', username=user.username, page=page_num)}}">{{page_num}}</a>
             </li>
+            {% endif %}
+        {% endfor %}
     </ul>
-
 </nav>
 {% endblock %}
 
