new font anc backg colors added

--- a/clubAppFolder/templates/index.html
+++ b/clubAppFolder/templates/index.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="jumbotron">
-    <h1>Club App Tittle</h1>
+<div class="jumbotron bg-danger" style="margin:0px;">
+    <h1 class="text-white">Club App Tittle</h1>
 </div>
 
-<div class="container">
+<div class="container-fluid bg-dark" style="padding: 0px;">
     {% for post in blog_posts.items %}
-        <div class="card">
+        <div class="card w-auto bg-dark">
             <div class="card-body">
-                <h2><a class="card-title" href="{{url_for('blog_posts.blog_post', blog_post_id=post.id)}}">{{post.title}}</a>
-                    <a href="{{url_for('users.user_posts', username=post.author.username)}}">Written By: {{post.author.username}}</a>
-                    <p>Published on: {{post.date.strftime('%Y-%m-%d')}}</p>
-                    <a class="btn btn-primary" href="{{url_for('blog_posts.blog_post', blog_post_id=post.id)}}">Read Blog Post</a>
+                <h2><a class="card-title text-white" href="{{url_for('blog_posts.blog_post', blog_post_id=post.id)}}">{{post.title}}</a>
+                    <a class="text-white" href="{{url_for('users.user_posts', username=post.author.username)}}">Written By: {{post.author.username}}</a>
+                    <p class="text-white">Published on: {{post.date.strftime('%Y-%m-%d')}}</p>
+                    <a class="btn btn-primary text-white" href="{{url_for('blog_posts.blog_post', blog_post_id=post.id)}}">Read Blog Post</a>
                 </h2>
             </div>
         </div>
