--- a/clubAppFolder/templates/index.html
+++ b/clubAppFolder/templates/index.html
@@ -8,7 +8,10 @@
     {% for post in blog_posts.items %}
         <div class="card w-auto bg-dark">
             <div class="row no-gutters">
-                <div class="col-10">
+                <div class="col-md-4">
+                    <img src="..." class="card-img" alt="...">
+                </div>
+                <div class="col-6">
                     <div class="card-body">
                         <h2><a class="card-title text-white" href="{{url_for('blog_posts.blog_post', blog_post_id=post.id)}}">{{post.title}}</a></h2>
                             <a class="text-white" href="{{url_for('users.user_posts', username=post.author.username)}}">Written By: {{post.author.username}}</a>
